--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     
+    
     <header>
         <h1>FONTES DE ENERGIA</h1> 
         <span>Armando Caliari Silva
@@ -16,10 +17,10 @@
             Lucas Zucoloto Soares Valbusa</span> 
     </header>
 
-    <section class="section-start">
+    <section id="section-start">
 
-        <h2 class="section-start-h2">Energia Renovável</h2>
-        <p class="section-start-p">As energias renováveis, também chamadas de energias limpas ou alternativas, 
+        <h2 id="start-h2">Energia Renovável</h2>
+        <p id="start-p">As energias renováveis, também chamadas de energias limpas ou alternativas, 
             são aquelas provenientes da natureza e que se renovam naturalmente em uma 
             escala de tempo humana, além de causarem baixo impacto ambiental.
             <br>
@@ -30,23 +31,27 @@
             de diferentes tipos de energia e combustíveis.</p>
 
     </section>
-    <section class="section-eolica">
-        <div class="section-eolica-div">
-            <h2 class="section-eolica-titulo">Eolica</h2>
-            <img class="section-eolica-imagem" src="assets/images/Energ_Eolica_frente.png" alt="Imagem de um cata-vento">
+    <section id="section-eolica">
+        <div id="eolica-div">
+            <h2 id="eolica-titulo">Eolica</h2>
+            <img id="eolica-imagem" src="assets/images/Energ_Eolica_frente.png" alt="Imagem de um cata-vento">
         </div>
-        <p class="section-eolica-p">Energia eólica é a energia cinética derivada da força dos ventos, que pode 
+        <p id="eolica-p">Energia eólica é a energia cinética derivada da força dos ventos, que pode 
             ser utilizada para várias finalidades, incluindo a produção de eletricidade a partir de aerogeradores.
             Os ventos são os responsáveis por movimentar as hélices das turbinas eólicas e gerar a força mecânica 
-            que, depois, será convertida em energia elétrica por meio de um gerador.br 
+            que, depois, será convertida em energia elétrica por meio de um gerador 
             <br> <br>
-            VANTAGENS: É inesgotável, Não emite gases poluentes e nem gera resíduos e Diminui a emissão de gases do 
+            <strong>VANTAGENS:</strong> É inesgotável, Não emite gases poluentes e nem gera resíduos e Diminui a emissão de gases do 
             efeito estufa (GEE).
-
-            DESVANTAGENS: Intermitência (nem sempre o vento sopra quando necessário), Impacto visual 
+            <br>
+            <strong>DESVANTAGENS:</strong> Intermitência (nem sempre o vento sopra quando necessário), Impacto visual 
             considerável/Modificação da paisagem e Impacto sonoro (produz ruído constante).
         </p>
     </section>
 
 </body>
 </html>
+<!--blur
+zoom 
+classe
+colocar tudo em rem ou tude em vh-->
