--- a/index.html
+++ b/index.html
@@ -61,5 +61,17 @@
         </div>
         <div class="div-imagem" id="solar-imagem"></div>
     </section>
+
+    <section id="section-hidre">
+        <div id="hidre-div">
+            <h2 id="hidre-h2">hidrelétrica</h2>
+            <p id="hidre-p">Nessa fonte a água de um rio ou represa passa por uma usina onde ativa as turbinas, gerando energia mecânica, e sai dela, terminando em um canal de descarga, através do qual é devolvida ao fluxo. Diretamente conectado à turbina, está o gerador elétrico rotativo (alternador), que transforma em energia elétrica a energia mecânica recebida pela turbina.
+                    <br><br>
+               <strong>VANTAGENS:</strong> Trata-se de uma energia limpa, barata e gerada de uma fonte renovável. 
+               <br>
+               <strong>DESVANTAGENS:</strong> A construção de usinas hidrelétricas traz impactos ambientais e sociais de grande magnitude, além de ser um processo custoso.</p>
+        </div>
+        <div class="div-imagem" id="hidre-imagem"></div>
+    </section>
 </body>
 </html>
