--- a/index.html
+++ b/index.html
@@ -31,41 +31,41 @@
             de diferentes tipos de energia e combustíveis.</p>
 
     </section>
-    <section id="section-eolica">
-        <div id="eolica-div">
-            <h2 id="eolica-titulo">Eolica</h2>
-            <div class="div-imagem" id="eolica-imagem" alt="Imagem de um cata-vento"></div>
+    <section class="sections" id="section-eolica">
+        <div class="divs" id="eolica-div">
+            <h2 class="titulo" id="eolica-titulo">Eolica</h2>
+            <p class="paragrafo" id="eolica-p">Energia eólica é a energia cinética derivada da força dos ventos, que pode 
+                ser utilizada para várias finalidades, incluindo a produção de eletricidade a partir de aerogeradores.
+                Os ventos são os responsáveis por movimentar as hélices das turbinas eólicas e gerar a força mecânica 
+                que, depois, será convertida em energia elétrica por meio de um gerador 
+                <br> <br>
+                <strong>VANTAGENS:</strong> É inesgotável, Não emite gases poluentes e nem gera resíduos e Diminui a emissão de gases do 
+                efeito estufa (GEE).
+                <br>
+                <strong>DESVANTAGENS:</strong> Intermitência (nem sempre o vento sopra quando necessário), Impacto visual 
+                considerável/Modificação da paisagem e Impacto sonoro (produz ruído constante).
+            </p>
         </div>
-        <p id="eolica-p">Energia eólica é a energia cinética derivada da força dos ventos, que pode 
-            ser utilizada para várias finalidades, incluindo a produção de eletricidade a partir de aerogeradores.
-            Os ventos são os responsáveis por movimentar as hélices das turbinas eólicas e gerar a força mecânica 
-            que, depois, será convertida em energia elétrica por meio de um gerador 
-            <br> <br>
-            <strong>VANTAGENS:</strong> É inesgotável, Não emite gases poluentes e nem gera resíduos e Diminui a emissão de gases do 
-            efeito estufa (GEE).
-            <br>
-            <strong>DESVANTAGENS:</strong> Intermitência (nem sempre o vento sopra quando necessário), Impacto visual 
-            considerável/Modificação da paisagem e Impacto sonoro (produz ruído constante).
-        </p>
+        <div class="div-imagem" id="eolica-imagem" alt="Imagem de um cata-vento"></div>
     </section>
 
-    <section id="section-solar">
-        <div id="solar-div">
-            <h2 id="solar-h2">Solar</h2>
-            <p id="solar-p">O termo energia solar pode se referir a qualquer uma das formas de energia provenientes da luz ou calor do sol.
+    <section class="sections" id="section-solar">
+        <div class="div-imagem" id="solar-imagem"></div>
+        <div class="divs" id="solar-div">
+            <h2 class="titulo" id="solar-h2">Solar</h2>
+            <p class="paragrafo" id="solar-p">O termo energia solar pode se referir a qualquer uma das formas de energia provenientes da luz ou calor do sol.
                 Para se transformar em energia a radiação solar passa por um inversor solar para ser adaptada ao padrão elétrico da rede e, depois, já pode ser utilizada para atender a casas, empresas e quaisquer outros estabelecimentos.
                 <br><br>
                 <strong>VANTAGENS:</strong> não polui, é renovável, limpa e silenciosa, pode ser usada em áreas isoladas da rede elétrica, necessidade mínima de manutenção, muito fácil de instalar e é barato para manter. 
                 
                 <br><strong>DESVANTAGENS:</strong> são o alto custo de aquisição (custo que se retorna em pouco tempo) e não gerar energia à noite.</p>
         </div>
-        <div class="div-imagem" id="solar-imagem"></div>
     </section>
 
-    <section id="section-hidre">
-        <div id="hidre-div">
-            <h2 id="hidre-h2">hidrelétrica</h2>
-            <p id="hidre-p">Nessa fonte a água de um rio ou represa passa por uma usina onde ativa as turbinas, gerando energia mecânica, e sai dela, terminando em um canal de descarga, através do qual é devolvida ao fluxo. Diretamente conectado à turbina, está o gerador elétrico rotativo (alternador), que transforma em energia elétrica a energia mecânica recebida pela turbina.
+    <section class="sections" id="section-hidre">
+        <div class="divs" id="hidre-div">
+            <h2 class="titulo" id="hidre-h2">Hidrelétrica</h2>
+            <p class="paragrafo" id="hidre-p">Nessa fonte a água de um rio ou represa passa por uma usina onde ativa as turbinas, gerando energia mecânica, e sai dela, terminando em um canal de descarga, através do qual é devolvida ao fluxo. Diretamente conectado à turbina, está o gerador elétrico rotativo (alternador), que transforma em energia elétrica a energia mecânica recebida pela turbina.
                     <br><br>
                <strong>VANTAGENS:</strong> Trata-se de uma energia limpa, barata e gerada de uma fonte renovável. 
                <br>
