--- a/index.html
+++ b/index.html
@@ -73,5 +73,61 @@
         </div>
         <div class="div-imagem" id="hidre-imagem"></div>
     </section>
+
+    <section class="sections" id="section-bio">
+        <div class="div-imagem" id="bio-imagem"></div>
+        <div class="divs" id="bio-div">
+            <h2 class="titulo" id="bio-h2">Biomassa</h2>
+            <p class="paragrafo" id="bio-p">A queima da biomassa aquece uma caldeira com água, transformando a água em vapor. Sob alta pressão, o vapor movimenta uma turbina que, por sua vez, aciona um gerador, produzindo energia elétrica que pode ser injetada na rede elétrica.
+<br><br>
+                <strong>VANTAGENS:</strong> É uma fonte renovável de energia e de baixo custo, sendo uma alternativa viável a fontes poluentes, como os combustíveis fósseis.
+                <br>
+                <strong>DESVANTAGENS:</strong> Sua obtenção intensifica o desmatamento e a substituição de áreas de vegetação nativa por monocultura, além de ser uma fonte de baixa eficiência energética.</p>
+        </div>
+    </section>
+
+    <section class="sections" id="section-geo">
+        <div class="divs" id="geo-div">
+            <h2 class="titulo" id="geo-h2">Geotérmica</h2>
+            <p class="paragrafo" id="geo-p">A energia geotérmica consiste em um tipo de energia renovável que é obtida
+                a partir do aproveitamento do calor proveniente do interior da Terra.
+                Mas, como é obtida a energia geotérmica? Para entender isso, é importante lembrarmos que o planeta Terra é constituído de diversas camadas. Na camada superior, encontra-se a crosta terrestre, de estrutura fina e composta por rochas. Logo abaixo está o manto terrestre, camada profunda e que é formada por magma, um material composto por uma mistura de rochas em estado líquido e pastoso, em razão das elevadas temperaturas do interior do planeta.
+                É comum que todo esse calor se manifeste em determinadas áreas da superfície terrestre, em razão de fendas geológicas e erupções vulcânicas. Tudo isso provoca o surgimento de gêiseres de vapor e nascentes de água quente. Nesse momento, é possível a obtenção da energia geotérmica.
+                
+             <br><br>   <strong>VANTAGENS:</strong> Menor gasto para produção, já que não precisa de compra de matéria-prima, É praticamente inesgotável, Menor emissão de gases poluentes e Pode atender às comunidades afastadas.
+                <br>
+                <strong>DESVANTAGENS:</strong> Emissão de ácido sulfídrico (H2S), nocivo à saúde, Poluição sonora causada pela usina geotérmica e Pode contaminar rios e lagos próximos.</p>
+        </div>
+        <div class="div-imagem" id="geo-imagem"></div>
+    </section>
+
+    <section class="sections" id="section-mare">
+        <div class="div-imagem" id="mare-imagem"></div>
+        <div class="divs" id="mare-div">
+            <h2 class="titulo" id="mare-h2">Maremotriz e Ondomotriz</h2>
+            <p class="paragrafo" id="mare-p">Energia ondomotriz
+                Uma das mais promissoras fontes de energia renovável, a energia ondomotriz é capaz de transformar o movimento das ondas, resultadas pela ação do vento na superfície do mar, em energia elétrica.
+                
+                Energia maremotriz
+                A energia maremotriz é capaz de gerar energia elétrica por meio da diferença de altura entre marés de alto e baixo porte, desde que a diferença seja de 7 metros entre as duas. O aproveitamento dessa energia é feito por meio de centrais elétricas.
+                <br><br><strong>VANTAGENS:</strong> Trata-se de uma energia limpa, que não produz resíduos poluentes ao meio ambiente e utiliza uma fonte renovável, que é a água. 
+                <br>
+                <strong>DESVANTAGENS:</strong> Apesar disso, os custos dos equipamentos ainda são muito altos, e existem impactos para os ecossistemas marinhos nas áreas onde são instaladas as usinas maremotrizes. E os locais propícios para a geração desse tipo de energia são muito específicos.</p>
+        </div>
+    </section>
+
+    <section class="sections" id="section-hidro">
+        <div class="divs" id="hidro-div">
+            <h2 class="titulo" id="hidro-h2">Hidrogênio</h2>
+            <p class="paragrafo" id="hidro-p">O hidrogénio é o elemento mais leve e o que possui o maior valor energético. Não é tóxico. Não acarreta emissões nocivas para o ambiente. E é até considerado o combustível do futuro.
+                Entretanto, o hidrogênio precisa ser produzido e é por esse processo que pode determinar se o elemento químico será uma alternativa sustentável ou não.
+                Como o hidrogênio não existe na Terra como um gás, ele deve ser separado de outros compostos. Dois dos métodos mais comuns usados ​​para a produção de hidrogênio são eletrólise ou divisão de água e reforma a vapor.
+                <br><br><strong>VANTAGENS:</strong> Um grande volume de hidrogênio pode ser facilmente armazenado de várias maneiras diferentes. O hidrogênio também é considerado como um combustível de alta eficiência e baixo poluente que pode ser usado para transporte, aquecimento e geração de energia em locais onde é difícil usar eletricidade.
+                <br>
+                <strong>DESVANTAGENS:</strong> É uma alternativa cara para produção de energia por conta principalmente de ser necessário produzir o hidrogênio que será usado como combustível.
+            </p>
+        </div>
+        <div class="div-imagem" id="hidro-imagem"></div>
+    </section>
 </body>
 </html>
